--- a/static/css/queasy.css
+++ b/static/css/queasy.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: bourbon;
+    src: url("../fonts/bourbon.otf") format("opentype");
+}
+
 /* navbar */
 .navbar-queasy {
     background-color: #00A1E5;
@@ -7,6 +12,49 @@
 body {
     background-color: #00A1E5;
     color: white;
+}
+
+.hd {
+    font-family: bourbon;
+}
+
+#intro, #details {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 620px;
+}
+
+#details {
+    display: none;
+}
+
+#noantrian {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    background: white;
+    padding: 16px;
+    color: black;
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    border-radius: 4px;
+}
+
+#udetails {
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    padding: 16px;
+    border: 3px solid white;
+    border-radius: 4px;
+    margin-bottom: 32px;
+}
+
+#name {
+    text-wrap: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 /* Title */
 /*.navbar-queasy .navbar-brand {
