--- a/static/css/queasy.css
+++ b/static/css/queasy.css
@@ -265,3 +265,11 @@ body {
     margin-left:7%;
     margin-top: 10px;
 }
+
+.logo-login{
+    text-align: center;
+}
+
+.queasy-login{
+    margin-top:5%;
+}
