--- a/static/css/queasy.css
+++ b/static/css/queasy.css
@@ -270,8 +270,9 @@ body {
     text-align: center;
 }
 
-.queasy-login{
-    margin-top:5%;
+.queasy-login {
+    margin-top: 5%;
+}
   
 .full100{
   width:100%;
